--- a/applicationset/examples/git-generator-directory/git-directories-example.yaml
+++ b/applicationset/examples/git-generator-directory/git-directories-example.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://github.com/dewandemo/applicationset.git
+      repoURL: https://github.com/Emc285/applicationset.git
       revision: HEAD
       directories:
       - path: examples/git-generator-directory/guestbook-example-apps/*
@@ -15,9 +15,15 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/dewandemo/applicationset.git
+        repoURL: https://github.com/Emc285/applicationset.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
