--- a/applicationset/examples/git-generator-directory/guestbook-example-apps/guestbook-kustomize-namespace.yaml
+++ b/applicationset/examples/git-generator-directory/guestbook-example-apps/guestbook-kustomize-namespace.yaml
@@ -1,6 +1,4 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: guestbook-kustomize 
-  labels:
-    argocd.argoproj.io/managed-by: openshift-gitops 
+  name: argocd
