--- a/applicationset/examples/list-generator/list-example.yaml
+++ b/applicationset/examples/list-generator/list-example.yaml
@@ -6,10 +6,10 @@ spec:
  generators:
  - list:
      elements:
-     - cluster: rancher-desktop
+     - cluster: engineering-dev
        url: https://kubernetes.default.svc
-#    - cluster: engineering-prod
-#      url: https://kubernetes.default.svc
+    - cluster: engineering-prod
+      url: https://kubernetes.default.svc
  template:
    metadata:
      name: '{{cluster}}-guestbook'
