--- a/applicationset/examples/list-generator/list-example.yaml
+++ b/applicationset/examples/list-generator/list-example.yaml
@@ -8,8 +8,8 @@ spec:
      elements:
      - cluster: engineering-dev
        url: https://kubernetes.default.svc
-    - cluster: engineering-prod
-      url: https://kubernetes.default.svc
+#    - cluster: engineering-prod
+#      url: https://kubernetes.default.svc
  template:
    metadata:
      name: '{{cluster}}-guestbook'
