--- a/applicationset/examples/design-doc/git-files-discovery.yaml
+++ b/applicationset/examples/design-doc/git-files-discovery.yaml
@@ -27,7 +27,7 @@
 #    "asset_id": "11223344"
 #    "cluster": {
 #        "owner": "Jesse_Suen@intuit.com",
-#        "name": "engineering-dev",
+#        "name": "eng-dev",
 #        "address": "http://1.2.3.4"
 #    }
 # }
