--- a/applicationset/examples/design-doc/git-files-literal.yaml
+++ b/applicationset/examples/design-doc/git-files-literal.yaml
@@ -22,7 +22,7 @@
 #         "asset_id": "11223344",
 #         "cluster": {
 #             "owner": "Jesse_Suen@intuit.com",
-#             "name": "engineering-dev",
+#             "name": "eng-dev",
 #             "address": "http://1.2.3.4"
 #         },
 #         "appVersions": {
