--- a/applicationset/examples/design-doc/list.yaml
+++ b/applicationset/examples/design-doc/list.yaml
@@ -7,7 +7,7 @@ spec:
   generators:
   - list:
       elements:
-      - cluster: engineering-dev
+      - cluster: eng-dev
         url: https://1.2.3.4
         values:
           project: dev
