--- a/applicationset/examples/matrix/list-and-git.yaml
+++ b/applicationset/examples/matrix/list-and-git.yaml
@@ -17,7 +17,7 @@ spec:
           - path: examples/git-generator-directory/guestbook-example-apps/*
       - list:
           elements:
-          - cluster: engineering-dev
+          - cluster: eng-dev
             url: https://kubernetes.default.svc
             values:
               project: default
