--- a/applicationset/examples/template-override/template-overrides-example.yaml
+++ b/applicationset/examples/template-override/template-overrides-example.yaml
@@ -10,7 +10,7 @@ spec:
   generators:
   - list:
       elements:
-        - cluster: engineering-dev
+        - cluster: eng-dev
           url: https://kubernetes.default.svc
       template:
         metadata: {}
